--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_API_URL="http://api.uznak.uz/api/v1"
-VITE_APP_BASE_URL="http://api.uznak.uz/api/v1"
+VITE_APP_API_URL="https://api.uznak.uz/api/v1"
+VITE_APP_BASE_URL="https://api.uznak.uz/api/v1"
